--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Home | Sam Edwards</title>
+    <title>Web Team Challenge | Find Your Career With Age Partnership</title>
+    <link href="favicon.ico" rel="shortcut icon" type="image/ico">
   </head>
   <body>
     <style>
@@ -13,6 +14,7 @@
         width: 50px;
         height: 50px;
         animation: spin 2s linear infinite;
+        margin: 300px auto;
     }
 
     @keyframes spin {
