Added logo, added ability to change q and keep track of answers

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Web Team Challenge | Find Your Career With Age Partnership</title>
     <link href="favicon.ico" rel="shortcut icon" type="image/ico">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <style>
@@ -22,6 +23,7 @@
         100% { transform: rotate(360deg); }
     }
     </style>
+    <img src="logo-inverted.png" />
     <div id="root"> <div class="loader"></div> </div>
     <!--
       The loader is overwritten by React.
