--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
         100% { transform: rotate(360deg); }
     }
     </style>
-    <img src="logo-inverted.png" />
+    <img src="/logo-img/" />
     <div id="root"> <div class="loader"></div> </div>
     <!--
       The loader is overwritten by React.
@@ -36,6 +36,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script src="/build/js/react/index.js"></script>
+    <script src="/react-jsx/"></script>
   </body>
 </html>
