Many many things.. gitignore, changed with style, title, form finish etc

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Web Team Challenge | Find Your Career With Age Partnership</title>
-    <link href="favicon.ico" rel="shortcut icon" type="image/ico">
+    <link href="/favicon/" rel="shortcut icon" type="image/ico">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
@@ -15,7 +16,7 @@
         width: 50px;
         height: 50px;
         animation: spin 2s linear infinite;
-        margin: 300px auto;
+        margin: 100px auto;
     }
 
     @keyframes spin {
@@ -23,7 +24,7 @@
         100% { transform: rotate(360deg); }
     }
     </style>
-    <img src="/logo-img/" />
+    <img style="width: 300px" src="/logo-img/" />
     <div id="root"> <div class="loader"></div> </div>
     <!--
       The loader is overwritten by React.
