--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Web Team Challenge | Find Your Career With Age Partnership</title>
     <link href="/favicon/" rel="shortcut icon" type="image/ico">
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
@@ -24,7 +24,8 @@
         100% { transform: rotate(360deg); }
     }
     </style>
-    <img style="width: 300px" src="/logo-img/" />
+    <img style="width: 300px; display: block; margin: 5px auto;" src="/logo-img/" />
+    <div class="divider"></div>
     <div id="root"> <div class="loader"></div> </div>
     <!--
       The loader is overwritten by React.
@@ -38,5 +39,6 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <script src="/react-jsx/"></script>
+    <div class="bottom-banner"></div>
   </body>
 </html>
